Update pom.xml
Enabled preview in surefire plugin